Closed
Bug 308052
Opened 20 years ago
Closed 20 years ago
###!!! ASSERTION: should not be reached nsFrame: '0', file nsFrame.cpp, line 3233
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
References
()
Details
(Keywords: assertion, top100)
Attachments
(1 file)
|
2.55 KB,
patch
|
bernd_mozilla
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: should not be reached nsFrame: '0', file nsFrame.cpp, line 3233
STEPS TO REPRODUCE
1. set accessibility.browsewithcaret = true in about:config
2. load URL
3. scroll to the end and place the caret as close to the end as possible
(in the black area)
4. type ARROW_UP 5 times or so
| Assignee | ||
Comment 1•20 years ago
|
||
The problem is that nsTableRowGroupFrame::GetLine() returns the number of
frames for the line where the cell frame was found:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/tables/nsTableRowGroupFrame.cpp&rev=3.344&root=/cvsroot&mark=1889,1894#1855
which is wrong in the case we found it on a previous line.
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/generic/nsFrame.cpp&rev=3.588&root=/cvsroot&mark=3191,3199,3201#3190
| Assignee | ||
Comment 2•20 years ago
|
||
Attachment #195666 -
Flags: superreview?(bzbarsky)
Attachment #195666 -
Flags: review?(bernd_mozilla)
Mats, I am currently moving, I will review this only in a couple of days.
Attachment #195666 -
Flags: review?(bernd_mozilla) → review+
Comment 4•20 years ago
|
||
Comment on attachment 195666 [details] [diff] [review]
Patch rev. 1
sr=bzbarsky. Sorry about the long delay. :(
Attachment #195666 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 5•20 years ago
|
||
Checked in to trunk at 2005-10-16 17:03 PDT.
-> FIXED
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•