Return the frame count for the given line 'aLineNumber', not the line where we find the first frame. b=308052 r=bernd sr=bzbarsky